lcd:set DSI HS clock as 228M,solve flicker problem

--- a/arch/arm/dts/o-panel_s500_linux.dts
+++ b/arch/arm/dts/o-panel_s500_linux.dts
@@ -303,7 +303,7 @@
 			dsi_phy_t2 = <0x2f06>;
 			dsi_phy_ctrl = <0xfc94>;
 			dsi_pin_map = <0x688>;
-			cmu_dsipll_clk = <0x12c01>;
+			cmu_dsipll_clk = <0x12601>;
 
 		};
 		
